<resources>
    <string name="app_name">ZinAPP</string>
    <string name="TweaksText">Filter settings</string>
    <string name="title_activity_settings">settings</string>
    <string name="image_folder_name">saved ZIN_images</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_preview">Image preview</string>
    <string name="image_preview">Image preview</string>
    <string name="apply_filter">filter</string>
    <string name="temp">Zinify/tmp</string>
    <string name="save_success">Image successfully saved</string>
    <string name="save_fail">File not saved due to an error!</string>

    <!-- Accessibility descriptions -->
    <string name="return_description">return</string>
    <string name="rotateL_description">rotate left</string>
    <string name="rotateR_description">rotate right</string>
    <string name="gallery_empty_info">no images found yet, get going!</string>
    <string name="str_delete">delete</string>
    <string name="str_edit">edit</string>
    <string name="str_return">return</string>
    <string name="str_save">save</string>
    <string name="external_pick_error_string">Pick from external gallery cancelled</string>
    <string name="sigma_slider_text">Adjust sigma parameter of filter</string>
</resources>