<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_preview"
        app:layout_constraintBottom_toTopOf="@id/applyFilterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sigma_slider"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:valueFrom="0.0"
        android:value="50"
        android:valueTo="100.0"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/sigma_slider"
        app:layout_constraintEnd_toEndOf="@id/sigma_slider"
        app:layout_constraintBottom_toBottomOf="@id/sigma_slider"
        android:text="@string/sigma_slider_text"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/return_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/return_description"
        app:layout_constraintBottom_toBottomOf="@id/applyFilterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/applyFilterBtn"
        app:layout_constraintTop_toTopOf="@+id/applyFilterBtn"
        tools:text="RETURN"
        app:iconSize="24dp"
        android:text="@string/str_return"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/return_description"
        app:layout_constraintBottom_toBottomOf="@id/applyFilterBtn"
        app:layout_constraintEnd_toStartOf="@+id/applyFilterBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/applyFilterBtn"
        app:icon="@drawable/ic_baseline_save_24"
        android:text="@string/str_save"
        app:iconSize="24dp"
        tools:text="SAVE IMG"
        app:srcCompat="@drawable/ic_baseline_save_24" />

    <Button
        android:id="@+id/applyFilterBtn"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/apply_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="FILTER"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rotateRightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rotateR_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_rotate_right" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rotateLeftBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rotateL_description"
        app:layout_constraintTop_toBottomOf="@id/rotateRightBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_baseline_rotate_left" />

</androidx.constraintlayout.widget.ConstraintLayout>